# Bucket-List

./: .gitignore  .travis.yml  README.md  config.py  ndoo.db  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
app/: __init__.py  test_config.py
app/auth/: controllers.py  models.py
app/auth/tests/: test_login.py  test_register.py
app/bucketlist/: controllers.py  models.py
app/bucketlist/tests/: test_bucketlist.py  test_items.py
migrations/: script.py.mako
migrations/versions/: 32ae0aa211c0_.py  34a38d5b56e8_.py
