[metadata]
name = Bucket List API
version = 1.0.2
description = Simple Flask, SQLAlchemy & Tox Python API
author = Evans Gacheru Munene
project_url = https://github.com/gacheruevans/cp2-bucketlist
author_email = evans.gacheru.munene@gmail.com
license = MIT
license_file = LICENSE
platforms = unix
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]
packages = app

install_requires = requirements.txt
python_requires = >= 3.9

[options.extras_require]
testing =
    pytest >=6.0
    pytest-cov>=4.1.0
    flake8>=8.6.1.0
    tox>=3.24

[options.packkage_data]
app = py.typed

[flake8]
max-line-length=160